--- a/ui/src/app/components/game/inventory/inventory.component.scss
+++ b/ui/src/app/components/game/inventory/inventory.component.scss
@@ -29,7 +29,7 @@ app-inventory-list-view, app-inventory-grouped-view {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 90%;
-  max-width: var(--spacing-9xl);
+  max-width: var(--container-m);
   max-height: 80vh;
   background: var(--gradient-card);
   border: var(--border-default);
