--- a/ui/src/app/components/manual/manual.component.scss
+++ b/ui/src/app/components/manual/manual.component.scss
@@ -37,7 +37,7 @@
   border-radius: var(--radius-l);
   box-shadow: var(--shadow-xl);
   width: 100%;
-  max-width: var(--spacing-10xl);
+  max-width: var(--container-3xl);
   height: 85vh;
   display: flex;
   flex-direction: column;
